compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bools__negation.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bools.rs
assertion_line: 141
expression: "pub fn negate(x) {\n    !x\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn negate(x) {
    !x
}

----- COMPILED JAVASCRIPT
export function negate(x) {
  return !x;
}
