compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bools__nil_case.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bools.rs
assertion_line: 128
expression: "\npub fn go(a) {\n  case a {\n    Nil -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(a) {
  case a {
    Nil -> 0
  }
}


----- COMPILED JAVASCRIPT
export function go(a) {
  return 0;
}
